--- a/index.html
+++ b/index.html
@@ -6,8 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>food-network</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+  <!-- start header section -->
+  <section>
+  <div class="header">
+      <div class="header-section">
+         <h2> <span class="text-color">skip </span> the dite  just eat healthy with food network</h2>
+         <p>imagine you don't need a dite becouse we provide healthy and deliciouse food for you!
+        </p>
+        <a class="link-color"href="#">Order Food</a>
+      </div>
+      <div class="header-section">
+      <img src="images/female/Group 8425.png" alt="hpy">
+      </div>
+  </div>      
+</section>
+  <!-- end header section -->
+
+    <!-- start about section -->
+<section class="about">
+<div class="about-part">
+  <img src="images/female/Person Image.png" alt="hpy">
+</div>
+<div class="about-part">
+<h3>About Me</h3>
+<p>Lorem ipsum dolor, sit amet consectetur 
+  evenietatque voluptatibus, quod doloribus adipisicing elit. Ex, nesciunt id doloremque
+  evenietatque voluptatibus, quod doloribus  placeat magnam expedita eos, est illo nemo evenietatque voluptatibus, quod doloribus 
+error ad rerum, quo tempore dolorem amet!</p>
+<a class="link-color"href="#">Contact me</a>
+</div>
+</section>
+
+   <!-- end about section -->
 </body>
 </html>
