send all poject

--- a/index.html
+++ b/index.html
@@ -42,7 +42,54 @@ error ad rerum, quo tempore dolorem amet!</p>
 <a class="link-color"href="#">Contact me</a>
 </div>
 </section>
-
    <!-- end about section -->
+   <!-- start recipies section -->
+<section id="recipies">
+  <div class="rcp-section">
+<h3>My Recipies </h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius hic reprehenderit vitae quo esse sint in non, dignissimos vero mollitia! <span>1500s</span>
+</p>
+  </div>
+  
+ <div class="recipies-content">
+ <div class="recipies-box img1">
+  <img src="images/food/Project Cover.jpg" alt="food">
+  <h3>Recipies Title</h3>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus doloremque accusantium autem quam laudantium ipsum delectus ut vero nobis animi!</p>
+ </div>
+ <div class="recipies-box img2">
+  <img src="images/food/Project Cover1.jpg" alt="food">
+  <h3>Recipies Title</h3>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus doloremque accusantium autem quam laudantium ipsum delectus ut vero nobis animi!</p>
+ </div>
+ <div class="recipies-box img3">
+  <img src="images/food/Project Cover.png" alt="food">
+  <h3>Recipies Title</h3>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus doloremque accusantium autem quam laudantium ipsum delectus ut vero nobis animi!</p>
+ </div>
+ </div>
+<div class="percent-box">
+  <div class="percent-box1 box">
+    <h1>700k</h1>
+    <p>youtube subscribers</p>
+  </div>
+  <div class="percent-box2 box">
+    <h1>2.4m</h1>
+    <p>instragram follower</p>
+  </div>
+  <div class="percent-box3 box">
+    <h1>100k</h1>
+    <p>dribble shot likes</p>
+  </div>
+</div>
+</section>
+      <!-- end recipies section -->
+<!--  start ffoter section -->
+<footer> 
+  <h3><span>FOOD</span> NETWORK</h3>
+  <P>Eat healthy to live.Live healthy to live happy </P>
+</footer>
+<!--  end ffoter section -->
+
 </body>
 </html>
