send food network

--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
 </div>
 <div class="about-part">
 <h3>About Me</h3>
-<p>Lorem ipsum dolor, sit amet consectetur 
-  evenietatque voluptatibus, quod doloribus adipisicing elit. Ex, nesciunt id doloremque
-  evenietatque voluptatibus, quod doloribus  placeat magnam expedita eos, est illo nemo evenietatque voluptatibus, quod doloribus 
-error ad rerum, quo tempore dolorem amet!</p>
+<p>Hello! I'm Happy Hamida.My goals web developer.I would work hard to achieve these goals.I believe i  can be a web developer</p>
 <a class="link-color"href="#">Contact me</a>
 </div>
 </section>
@@ -47,25 +44,25 @@ error ad rerum, quo tempore dolorem amet!</p>
 <section id="recipies">
   <div class="rcp-section">
 <h3>My Recipies </h3>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius hic reprehenderit vitae quo esse sint in non, dignissimos vero mollitia! <span>1500s</span>
+<p> imagine you don't need a dite becouse we provide healthy and deliciouse food for you!
 </p>
   </div>
   
  <div class="recipies-content">
  <div class="recipies-box img1">
   <img src="images/food/Project Cover.jpg" alt="food">
-  <h3>Recipies Title</h3>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus doloremque accusantium autem quam laudantium ipsum delectus ut vero nobis animi!</p>
+  <h3>Recipies Title 1</h3>
+  <p>A slightly healthier version, but just as cheesys,and just as easy.</p>
  </div>
  <div class="recipies-box img2">
   <img src="images/food/Project Cover1.jpg" alt="food">
-  <h3>Recipies Title</h3>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus doloremque accusantium autem quam laudantium ipsum delectus ut vero nobis animi!</p>
+  <h3>Recipies Title 2</h3>
+  <p>this is very intersting food.It make this super simple lunch even faster</p>
  </div>
  <div class="recipies-box img3">
   <img src="images/food/Project Cover.png" alt="food">
-  <h3>Recipies Title</h3>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus doloremque accusantium autem quam laudantium ipsum delectus ut vero nobis animi!</p>
+  <h3>Recipies Title 3</h3>
+  <p>This is very helpfull food in our health.It is very very intersting soop. </p>
  </div>
  </div>
 <div class="percent-box">
