--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 <div class="about-part">
 <h3>About Me</h3>
-<p>Hello! I'm Happy Hamida.My goals web developer.I would work hard to achieve these goals.I believe i  can be a web developer</p>
+<p>Friends, I am Ranjan Das. I want to be a big developer. As much as I am a computer student, I want to move forward with this work. I hope everyone will support.</p>
 <a class="link-color"href="#">Contact me</a>
 </div>
 </section>
